@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: drawboard.c,v 1.48 2008/01/16 21:02:42 Superfly_Jon Exp $
+ * $Id: drawboard.c,v 1.49 2008/01/19 08:58:52 c_anthon Exp $
  */
 
 #include "config.h"
@@ -58,7 +58,7 @@ static char *DrawBoardStd( char *sz, const TanBoard anBoard, int fRoll,
                            int nChequers ) {
 
     char *pch = sz, *pchIn;
-    unsigned int i, x, y;
+    unsigned int x, y;
 	unsigned int cOffO = nChequers, cOffX = nChequers;
 	TanBoard an;
     static char achX[ 17 ] = "     X6789ABCDEF",
@@ -199,14 +199,12 @@ static char *DrawBoardStd( char *sz, const TanBoard anBoard, int fRoll,
     *pch++ = achX[ anBoard[ 1 ][ 24 ] ];
     *pch++ = ' ';
     *pch++ = '|';
-    
-    for(i = 0; i < 6; i++)
-	{
+        
+    for( ; x < UINT_MAX; x-- ) {
         *pch++ = ' ';
         *pch++ = anBoard[ 1 ][ x ] ? achX[ anBoard[ 1 ][ x ] ] :
                 achO[ anBoard[ 0 ][ 23 - x ] ];
         *pch++ = ' ';
-		x--;
     }
 
     *pch++ = '|';
@@ -217,12 +215,9 @@ static char *DrawBoardStd( char *sz, const TanBoard anBoard, int fRoll,
         *pch++ = ( cOffX > 5 * x + 4 ) ? 'X' : ' ';
 
     *pch++ = '\n';
-
-	for( i = 0; i < 3; i++ )
-	{
-		y = 3 - i;
-
-		*pch++ = ' ';
+    
+    for( y = 3; y < UINT_MAX; y-- ) {
+        *pch++ = ' ';
         *pch++ = '|';
 
         for( x = 11; x > 5; x-- ) {
@@ -238,13 +233,11 @@ static char *DrawBoardStd( char *sz, const TanBoard anBoard, int fRoll,
         *pch++ = ' ';
         *pch++ = '|';
         
-	    for(i = 0; i < 6; i++)
-        {
+        for( ; x < UINT_MAX; x-- ) {
             *pch++ = ' ';
             *pch++ = anBoard[ 1 ][ x ] > y ? 'X' :
                 anBoard[ 0 ][ 23 - x ] > y ? 'O' : ' ';
             *pch++ = ' ';
-			x--;
         }
         
         *pch++ = '|';
@@ -301,7 +294,7 @@ static char *DrawBoardCls( char *sz, const TanBoard anBoard, int fRoll,
                            int nChequers) {
 
     char *pch = sz, *pchIn;
-    unsigned int i, x, y, cOffO = nChequers, cOffX = nChequers;
+    unsigned int x, y, cOffO = nChequers, cOffX = nChequers;
 	TanBoard an;
     static char achX[ 17 ] = "     X6789ABCDEF",
         achO[ 17 ] = "     O6789ABCDEF";
@@ -346,10 +339,10 @@ static char *DrawBoardCls( char *sz, const TanBoard anBoard, int fRoll,
 
     *pch++ = '\n';
 
-    for( y = 0; y < 4; y++ )
-	{
-        for( x = 0; x < 3; x++ )
-            *pch++ = ( cOffO > 5 * (2 - x) + y ) ? 'O' : ' ';
+    for( y = 0; y < 4; y++ ) {
+    
+        for( x = 2; x < UINT_MAX; x-- )
+            *pch++ = ( cOffO > 5 * x + y ) ? 'O' : ' ';
 
         *pch++ = ' ';
         *pch++ = '|';
@@ -384,8 +377,8 @@ static char *DrawBoardCls( char *sz, const TanBoard anBoard, int fRoll,
         *pch++ = '\n';
     }
 
-    for( x = 0; x < 3; x++ )
-        *pch++ = ( cOffO > 5 * (2 - x) + 4 ) ? 'O' : ' ';
+    for( x = 2; x < UINT_MAX; x-- )
+        *pch++ = ( cOffO > 5 * x + 4 ) ? 'O' : ' ';
 
     *pch++ = ' ';
     *pch++ = '|';
@@ -428,8 +421,8 @@ static char *DrawBoardCls( char *sz, const TanBoard anBoard, int fRoll,
 
     *pch++ = '\n';
 
-    for( x = 0; x < 3; x++ )
-        *pch++ = ( cOffX > 5 * (2 - x) + 4 ) ? 'X' : ' ';
+    for( x = 2; x < UINT_MAX; x-- )
+        *pch++ = ( cOffX > 5 * x + 4 ) ? 'X' : ' ';
 
     *pch++ = ' ';
     *pch++ = '|';
@@ -461,12 +454,10 @@ static char *DrawBoardCls( char *sz, const TanBoard anBoard, int fRoll,
 
     *pch++ = '\n';
     
-    for( i = 0; i < 4; i++ )
-	{
-		y = 3 - i;
+    for( y = 3; y < UINT_MAX; y-- ) {
 
-	    for( x = 0; x < 3; x++ )
-            *pch++ = ( cOffX > 5 * (2 - x) + y ) ? 'X' : ' ';
+        for( x = 2; x < UINT_MAX; x-- )
+            *pch++ = ( cOffX > 5 * x + y ) ? 'X' : ' ';
 
         *pch++ = ' ';
         *pch++ = '|';
