@@ -1,3 +1,7 @@
+Sat Jan 19 09:58:13 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* drawboard.c: fix board after uint changes
+
 Tue Jan 15 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gnubg-types.h + others: change board type to unsigned
